--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "clean-git": "rm -fr .git && git init"
   },
   "keywords": [
-    "html", "handlebars", "js", "sass", "babel", "css", "easy", "boilerplate", "designers", "creatives"
+    "html",
+    "handlebars",
+    "js",
+    "sass",
+    "babel",
+    "css",
+    "easy",
+    "boilerplate",
+    "designers",
+    "creatives"
   ],
   "author": "Matthew Alicea",
-  "license": "0BSD",
   "repository": "https://github.com/matthew-ia/planter.git",
   "devDependencies": {
     "@babel/core": "^7.2.0",
