--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.14",
     "browserify": "^16.2.3",
+    "csvtojson": "^2.0.10",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-beautify": "^3.0.0",
