implemented inline css in build output with smoosher

--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "sass": "^1.32.6",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "gulp-smoosher": "^0.0.9"
   }
 }
